<resources>
    <string name="app_name">HLAndroidApp</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
</resources>