<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/light_grey"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSignup"
        android:text="@string/signup"
        android:textSize="25pt"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtFirstName"
            android:layout_below="@+id/tvSignup"
            android:layout_marginTop="90dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/firstname"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtLastName"
            android:layout_below="@+id/edtFirstName"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/lastname"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtEmail"
        android:layout_below="@+id/edtLastName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPassword"
        android:layout_below="@+id/edtEmail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_pwd"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGender"
            android:text="@string/gender"
            android:layout_below="@id/edtPassword"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textSize="8pt"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtGender"
            android:orientation="horizontal"
            android:layout_below="@id/edtPassword"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/tvGender"
            >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbtMale"
                    android:text="@string/male"
                    />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbtFemale"
                android:text="@string/female"
                />

        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignup"
            android:layout_below="@id/rbtGender"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/signup"
            />

</RelativeLayout>